--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -134,7 +134,7 @@ header #current-task .task-controls .task-control:hover {
     height: 82vh;
     padding: 0;
     margin: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     list-style: none;
 }
 
